RM-0: Init font icons
https://gyazo.com/b35f437fe44e6ec42eba8051962c4c50

--- a/angular.json
+++ b/angular.json
@@ -28,6 +28,7 @@
               "src/assets"
             ],
             "styles": [
+              "src/assets/sass/reset.scss",
               "src/styles.scss"
             ],
             "scripts": []
