--- a/angular.json
+++ b/angular.json
@@ -31,6 +31,11 @@
               "src/assets/sass/reset.scss",
               "src/styles.scss"
             ],
+            "stylePreprocessorOptions": {
+              "includePaths": [
+                "src/assets/sass"
+              ]
+            },
             "scripts": []
           },
           "configurations": {
