RM-3: Table legend
https://gyazo.com/358a0e9ada50555dd705d9b08be71dde

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,9 @@
       "@env/*": ["src/environments/*"],
       "@configs/*": ["src/app/configs/*"],
       "@components/*": ["src/app/shared/components/*"],
-      "@directives/*": ["src/app/shared/directives/*"]
+      "@directives/*": ["src/app/shared/directives/*"],
+      "@utils/*": ["src/app/utils/*"],
+      "@services/*": ["src/app/shared/services/*"]
     },
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
