RM-0: Implement modal
https://gyazo.com/d00add9ec52f5f385bd2ba0b3d4ba01a

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
       "@configs/*": ["src/app/configs/*"],
       "@components/*": ["src/app/shared/components/*"],
       "@directives/*": ["src/app/shared/directives/*"],
-      "@utils/*": ["src/app/utils/*"],
+      "@utils/*": ["src/app/shared/utils/*"],
       "@services/*": ["src/app/shared/services/*"]
     },
     "outDir": "./dist/out-tsc",
